test/typecheck/bad-returncallindirect-no-table.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-tail-call
;;; ERROR: 1
(module
  (type $v_v (func))

  (func
    i32.const 0
    return_call_indirect)
)
(;; STDERR ;;;
out/test/typecheck/bad-returncallindirect-no-table.txt:9:5: error: return_call_indirect requires table 0 to be an imported or defined table.
    return_call_indirect)
    ^^^^^^^^^^^^^^^^^^^^
;;; STDERR ;;)
